finished style of nav bar

--- a/static/html/header.html
+++ b/static/html/header.html
@@ -3,6 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{{ .Title }}</title>
   <link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
 </head>
 {{ end }}
