--- a/static/html/pages/index.html
+++ b/static/html/pages/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-{{ template "header" .header}}
+{{ template "header" .Header }}
 <body>
-  {{ template "navbar" .navbar}}
+  {{ template "navbar" . }}
+  {{ template "footer" . }}
 </body>
 </html>
