--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -1,21 +1,23 @@
 {{ define "navbar" }}
 
-<div class="navbar nav-cc">
-  <a href="/" class="navbar-brand">CorvusCrypto <img class="logo-small" src="/static/images/logo.png"/></a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="#">Posts</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link {{if eq .Request.URL.Path "/about"}}active{{end}}" href="#">About Me</a>
-    </li>
-    <li class="nav-item">
-      <input type="text" class="form-control nav-search" />
-    </li>
-  </ul>
+<div class="navbar nav-cc navbar-fixed-top">
+  <div class="nav-wrapper">
+    <ul class="nav navbar-nav">
+      <a href="/" class="navbar-brand">CorvusCrypto <img class="logo-small" src="/static/images/logo.png"/></a>
+      <li class="nav-item">
+        <a class="nav-link {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="#">Posts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {{if eq .Request.URL.Path "/about"}}active{{end}}" href="#">About Me</a>
+      </li>
+      <li class="nav-item nav-search">
+        <input type="text" class="form-control nav-search__input" />
+      </li>
+    </ul>
+  </div>
 </div>
 
 {{ end }}
