finished the basic card style

--- a/static/html/pages/index.html
+++ b/static/html/pages/index.html
@@ -20,6 +20,8 @@
     </div>
     <div class="latest-post">
       {{ template "posts.card" .LatestPost}}
+      {{ template "posts.card" .LatestPost}}
+      {{ template "posts.card" .LatestPost}}
     </div>
   </div>
   {{ template "footer" . }}
