--- a/static/html/common/header.html
+++ b/static/html/common/header.html
@@ -1,6 +1,6 @@
 {{ define "header" }}
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=320, initial-scale=1">
   <title>{{ .Title }}</title>
   <link href="{{ .Assets.CSS.URL }}?{{ .Assets.CSS.Version }}" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
