--- a/static/html/common/navbar.html
+++ b/static/html/common/navbar.html
@@ -1,9 +1,31 @@
 {{ define "navbar" }}
 
-<div class="navbar nav-cc navbar-fixed-top">
-  <div class="nav-wrapper">
+<nav class="navbar nav-cc navbar-fixed-top">
+  <div class="nav-wrapper hidden-md-down">
     <ul class="nav navbar-nav">
       <a href="/" class="navbar-brand">CorvusCrypto <img class="logo-small" src="/static/images/logo.png"/></a>
+      <li class="nav-item">
+        <a class="nav-link animate {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link animate {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="#">Posts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link animate {{if eq .Request.URL.Path "/about"}}active{{end}}" href="#">About Me</a>
+      </li>
+      <li class="nav-item nav-search">
+        <input type="text" class="form-control nav-search__input" />
+      </li>
+    </ul>
+  </div>
+  <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Toggle navigation">
+    &#9776;
+  </button>
+  <div class="collapse mobile navbar-toggleable-md hidden-lg-up" id="collapsedMenu">
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link no-highlight" href="#">CorvusCrypto <img class="logo-small-collapsed" src="/static/images/logo.png"/></a>
+      </li>
       <li class="nav-item">
         <a class="nav-link {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
       </li>
@@ -18,6 +40,5 @@
       </li>
     </ul>
   </div>
-</div>
-
+</nav>
 {{ end }}
