--- a/static/html/common/navbar.html
+++ b/static/html/common/navbar.html
@@ -18,14 +18,12 @@
       </li>
     </ul>
   </div>
-  <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Toggle navigation">
-    &#9776;
+  <button class="navbar-toggler hidden-lg-up pull-xs-right" type="button" data-toggle="collapse" data-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Toggle navigation">
+    Menu
   </button>
-  <div class="collapse mobile navbar-toggleable-md hidden-lg-up" id="collapsedMenu">
+  <a class="hidden-lg-up" href="#">CorvusCrypto <img class="logo-small-collapsed" src="/static/images/logo.png"/></a>
+  <div class="collapse mobile navbar-toggleable-md hidden-lg-up visible-sc" id="collapsedMenu">
     <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link no-highlight" href="#">CorvusCrypto <img class="logo-small-collapsed" src="/static/images/logo.png"/></a>
-      </li>
       <li class="nav-item">
         <a class="nav-link {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
       </li>
