--- a/static/html/common/navbar.html
+++ b/static/html/common/navbar.html
@@ -5,13 +5,13 @@
     <ul class="nav navbar-nav">
       <a href="/" class="navbar-brand">CorvusCrypto <img class="logo-small" src="/static/images/logo.png"/></a>
       <li class="nav-item">
-        <a class="nav-link animate {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
+        <a class="nav-link animate {{if eq .Request.URL.Path "/"}}active{{end}}" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link animate {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="#">Posts</a>
+        <a class="nav-link animate {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="/posts">Posts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link animate {{if eq .Request.URL.Path "/about"}}active{{end}}" href="#">About Me</a>
+        <a class="nav-link animate {{if eq .Request.URL.Path "/about"}}active{{end}}" href="/about">About Me</a>
       </li>
       <li class="nav-item nav-search">
         <input type="text" class="form-control nav-search__input" />
@@ -25,16 +25,16 @@
   <div class="collapse mobile navbar-toggleable-md hidden-lg-up visible-sc" id="collapsedMenu">
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link {{if eq .Request.URL.Path "/"}}active{{end}}" href="#">Home</a>
+        <a class="nav-link {{if eq .Request.URL.Path "/"}}active{{end}}" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="#">Posts</a>
+        <a class="nav-link {{if eq .Request.URL.Path "/posts"}}active{{end}}" href="/posts">Posts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link {{if eq .Request.URL.Path "/about"}}active{{end}}" href="#">About Me</a>
-      </li>
+        <a class="nav-link {{if eq .Request.URL.Path "/about"}}active{{end}}" href="/about">About Me</a>
+      </li>23
       <li class="nav-item nav-search">
-        <input type="text" class="form-control nav-search__input" />
+        <input type="text" class="form-control nav-search__input" placeholder="Search Posts"/>
       </li>
     </ul>
   </div>
